enable optimized data sets load of DataExplorer for Android saved osd files